syntax = "proto3";

option csharp_namespace = "HuppyService.Service.Protos";

import "google/protobuf/empty.proto";

package CommandLog;

service CommandLog {
    rpc GetCount(google.protobuf.Empty) returns (CommandLogCount);
	rpc GetAverageExecutionTime(google.protobuf.Empty) returns (AverageTimeResponse);
    rpc GetAiUsage(google.protobuf.Empty) returns (AiUsageResponse);
    rpc AddCommand(CommandLogModel) returns (CommandLogModelResponse);
    rpc RemoveCommand(CommandLogModel) returns (CommandLogResponse);
}

message CommandLogCount {
    int32 Count = 1;
}

message AverageTimeResponse {
    double AverageTime = 1;
}

message AiUsageResponse {
    map<uint64, int32> AiUsers = 1;
}

message CommandLogModel {
    string CommandName = 1;
    uint64 UnixTime = 2;
    bool IsSuccess = 3;
    uint64 UserId = 4;
    int64 ExecutionTimeMs = 5;
    uint64 ChannelId = 6;
    string ErrorMessage = 7;
    uint64 GuildId = 8;
}

message CommandLogModelResponse {
    int32 Id = 1;
    string CommandName = 2;
    uint64 UnixTime = 3;
    bool IsSuccess = 4;
    uint64 UserId = 5;
    int64 ExecutionTimeMs = 6;
    uint64 ChannelId = 7;
    string ErrorMessage = 8;
    uint64 GuildId = 9;
}

message CommandLogResponse {
    bool IsSuccess = 1;
}